--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Encrypted Contacts</h1>
-
+        <h1>Contacts</h1>
+        <p>Hope you find your phone soon.</p>
         <!-- Login Section -->
         <div class="login-section active">
             <div class="error" id="loginError"></div>
