--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Contacts</h1>
-        <p>Hope you find your phone soon.</p>
+        <h4>Hope you find your phone soon.</h4>
         <!-- Login Section -->
         <div class="login-section active">
             <div class="error" id="loginError"></div>
